--- a/examples/iv_qt/dialog.ui
+++ b/examples/iv_qt/dialog.ui
@@ -22,20 +22,20 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="9" column="3">
-      <widget class="QLabel" name="label_13">
+     <item row="10" column="0" colspan="2">
+      <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>s</string>
+        <string>Tempeartures (separated by comma, 1.8-350 K)</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="7" column="2" colspan="2">
-      <widget class="QSpinBox" name="sbPoints">
-       <property name="maximum">
-        <number>2500</number>
-       </property>
-       <property name="value">
-        <number>1</number>
+     <item row="2" column="0" colspan="2">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>B290X</string>
        </property>
       </widget>
      </item>
@@ -43,13 +43,6 @@
       <widget class="QLabel" name="lbUnitLimit">
        <property name="text">
         <string>A</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="3">
-      <widget class="QLabel" name="lbUnitStop">
-       <property name="text">
-        <string>V</string>
        </property>
       </widget>
      </item>
@@ -67,24 +60,27 @@
        </item>
       </widget>
      </item>
-     <item row="4" column="0" colspan="2">
-      <widget class="QLabel" name="label">
+     <item row="8" column="0" colspan="2">
+      <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>Source mode</string>
+        <string>Limit (compliance)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="3">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>s</string>
        </property>
       </widget>
      </item>
      <item row="6" column="2">
-      <widget class="QLineEdit" name="leStop">
+      <widget class="ValLineEdit" name="leStop">
        <property name="text">
         <string>0</string>
        </property>
-      </widget>
-     </item>
-     <item row="8" column="2">
-      <widget class="QLineEdit" name="leLimit">
-       <property name="text">
-        <string>0.05</string>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -95,10 +91,26 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="0" colspan="2">
-      <widget class="QLabel" name="label_5">
+     <item row="4" column="0" colspan="2">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>I/V limit</string>
+        <string>Source mode</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2" colspan="2">
+      <widget class="QSpinBox" name="sbPoints">
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>100000</number>
+       </property>
+       <property name="value">
+        <number>1</number>
        </property>
       </widget>
      </item>
@@ -117,40 +129,19 @@
       </widget>
      </item>
      <item row="9" column="2">
-      <widget class="QLineEdit" name="leIntegration">
+      <widget class="ValLineEdit" name="leIntegration">
        <property name="text">
         <string>0.04</string>
        </property>
-      </widget>
-     </item>
-     <item row="10" column="0" colspan="2">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Tempeartures (separated by comma, 1.8-350 K)</string>
-       </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" colspan="2">
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>B290X</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="2">
-      <widget class="QLineEdit" name="leStart">
-       <property name="text">
-        <string>0</string>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item row="7" column="0" colspan="2">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Points</string>
+        <string>Points (1 to 10000)</string>
        </property>
       </widget>
      </item>
@@ -161,6 +152,36 @@
        </property>
       </widget>
      </item>
+     <item row="5" column="2">
+      <widget class="ValLineEdit" name="leStart">
+       <property name="text">
+        <string>0</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="3">
+      <widget class="QLabel" name="lbUnitStop">
+       <property name="text">
+        <string>V</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
+      <widget class="ValLineEdit" name="leLimit">
+       <property name="text">
+        <string>0.05</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2" colspan="2">
+      <widget class="QComboBox" name="cbPPMS"/>
+     </item>
      <item row="5" column="3">
       <widget class="QLabel" name="lbUnitStart">
        <property name="text">
@@ -169,30 +190,11 @@
       </widget>
      </item>
      <item row="10" column="2" colspan="2">
-      <widget class="QLineEdit" name="leTemps"/>
-     </item>
-     <item row="11" column="0" colspan="4">
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <widget class="ValLineEdit" name="leTemps">
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-     </item>
-     <item row="0" column="0" colspan="4">
-      <widget class="QCheckBox" name="cbUsePpms">
-       <property name="text">
-        <string>Use PPMS to control temperature</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2" colspan="2">
-      <widget class="QComboBox" name="cbPPMS"/>
      </item>
      <item row="2" column="2" colspan="2">
       <widget class="QComboBox" name="cbB290X"/>
@@ -204,10 +206,57 @@
        </property>
       </widget>
      </item>
+     <item row="12" column="0" colspan="4">
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2" colspan="2">
+      <widget class="QCheckBox" name="cbUsePpms">
+       <property name="text">
+        <string>Use PPMS to control temperature</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0" colspan="4">
+      <widget class="QPushButton" name="pbLoad">
+       <property name="text">
+        <string>Load from file</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ValLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>validator.h</header>
+  </customwidget>
+ </customwidgets>
+ <tabstops>
+  <tabstop>cbUsePpms</tabstop>
+  <tabstop>cbPPMS</tabstop>
+  <tabstop>cbB290X</tabstop>
+  <tabstop>cbFourWire</tabstop>
+  <tabstop>cbSource</tabstop>
+  <tabstop>leStart</tabstop>
+  <tabstop>leStop</tabstop>
+  <tabstop>sbPoints</tabstop>
+  <tabstop>leLimit</tabstop>
+  <tabstop>leIntegration</tabstop>
+  <tabstop>leTemps</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
